objects/AreaCodeMap__c.object
<CustomObject>
    <fields>
        <fullName>AreaCode__c</fullName>
        <description>Actual Area Code</description>
        <inlineHelpText>Area Code Map</inlineHelpText>
        <label>AreaCode</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIDValue__c</fullName>
        <label>CLIDValue</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>AreaCodeMap</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AreaCode__c</columns>
        <columns>CLIDValue__c</columns>
        <columns>Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AreaCodeMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AreaCodeMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>